# wallswitch

./: .gitignore  Cargo.toml  README.md  magick-examples-01.txt  magick-examples-02.txt  update_completions.sh
completions/: completion_derive.bash  completion_derive.elvish  completion_derive.fish  completion_derive.powershell  completion_derive.zsh  readme
perl/: wallswitch.pl
src/: app.rs  args_v1.rs  args_v2.rs  backends.rs  config.rs  dependencies.rs  desktop.rs  desktops.rs  dimension.rs  environment.rs  error.rs  fileinfo.rs  lib.rs  main.rs  monitors.rs  orientation.rs  pids.rs  traits.rs  walkdir.rs
src/backends/: awww.rs  common.rs  desktop.rs  detector.rs  hyprpaper.rs  mod.rs  swaybg.rs  wallpaper.rs
src/cli/: args.rs  list.rs  mod.rs
src/core/: config.rs  dimension.rs  fileinfo.rs  mod.rs  orientation.rs  state.rs
src/effects/: aurora.rs  common.rs  julia.rs  mandelbrot.rs  mod.rs  newton.rs  nova.rs  star.rs
src/sys/: environment.rs  metadata.rs  mod.rs  pids.rs  walkdir.rs
src/utils/: colors.rs  complex.rs  dependencies.rs  effect.rs  mod.rs  random.rs  traits.rs
