[package]
name = "wallswitch"
description = "randomly selects wallpapers for multiple monitors"
authors = ["Claudio F S Rodrigues <claudiofsrodrigues@gmail.com>"]
version = "0.52.1"
repository = "https://github.com/claudiofsr/wallswitch"
homepage = "https://github.com/claudiofsr/wallswitch"
documentation = "https://docs.rs/wallswitch"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
categories = ["command-line-utilities"]
keywords = [
    "wallpaper",
    "desktop",
    "random",
    "images",
    "switch",
]

[dependencies]
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
# rayon = { version = "1.10" }

# optional:
anstyle = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive", "color"], optional = true }
clap_complete = { version = "4.5", optional = true }

[features]
default = ["args_v1"]

args_v1 = ["dep:anstyle", "dep:clap", "dep:clap_complete"]
args_v2 = []

[lints.rust]
unsafe_code = "forbid"

# Mutually exclusive features:
# cargo b -r && cargo install --path=. --features args_v1
# cargo b -r && cargo install --path=. --features args_v2

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
debug = true            # debug info at all.
strip = "symbols"       # Strip symbols from a binary.
opt-level = 3           # All optimizations.
overflow-checks = true  # Panic will occur on overflow.
lto = true              # Enable link time optimization.
codegen-units = 1       # Use a single codegen for size optimization.
panic = "abort"         # Remove traceback information.
incremental = true      # Save information to disk, improving re-compile times.

[profile.dev]
opt-level = 1           # Use slightly better optimizations.
